--- a/etc/pg_hba.conf
+++ b/etc/pg_hba.conf
@@ -1,5 +1,3 @@
-
-
 # DO NOT DISABLE!
 # If you change this first entry you will need to make sure that the
 # database superuser can access the database using some other method.
@@ -10,6 +8,7 @@
 local   all             postgres                                peer
 local   all             super_admin                             md5
 host    all             all             127.0.0.1/32            md5
+host    all             all             10.69.1.29/32           md5
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
