--- a/etc/pg_hba.conf
+++ b/etc/pg_hba.conf
@@ -9,6 +9,7 @@ local   all             postgres                                peer
 local   all             super_admin                             md5
 host    all             all             127.0.0.1/32            md5
 host    all             all             10.69.1.29/32           md5
+host    all             all             10.69.1.18/32           md5
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
